separación de medicina estetica

--- a/cirugia-plastica-facial.html
+++ b/cirugia-plastica-facial.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
     <title>Dra. Micaela Taverna Cirujana Plástica</title>
-    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> </head>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
+</head>
 <body>
     <header id='mainHeader'>
         <div class="logo">
@@ -64,51 +65,53 @@
       </div>
   </div>
     <div class="container">
-      <h2 class="service-title">Cirugía del contorno corporal</h2>
-        <div class="service-presentation">   
-          <div class="service-list">
-            <div class="service-pic">
-              <img src="styles/img/lipo.jpg" alt="lipo">
+      <h2 class="service-title">Cirugía plástica y reparadora</h2>
+          <div class="service-presentation">
+            <div class="service-list"> 
+                <h2 class="service-subtitle" id="rostro">Cirugía Facial</h2>
+                <div class="service-pic">
+                  <img src="styles/img/rostro.jpg" alt="rostro">
+                  </div>
+                <ul> 
+                  <li> 
+                    <h2 id="blefaroplastia">blefaroplastia</h2>
+                      <p> La blefaroplastia es la cirugía que rejuvenece el contorno de los ojos eliminando el exceso de piel y bolsas grasas tanto de los párpados superiores como inferiores. En los párpados superiores la cicatriz queda disimulada en el surco palpebral y en los inferiores en la línea de las pestañas. También se pueden eliminar las bolsas grasas inferiores sin incisiones externas.  
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="rinoplastia">rinoplastia</h2>
+                      <p> La rinoplastía es una cirugía que busca llevar tu nariz a una forma más armoniosa con respecto al resto de tu cara sin parecer “operada”. Con ella se pueden: reducir o aumentar el tamaño de la nariz (si es demasiado larga o corta), corregir la forma de la punta de la nariz, corregir la giba, reducir la abertura de las fosas nasales, corregir desvíos y problemas respiratorios.
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="auriculoplastia">auriculoplastia</h2>
+                      <p> La cirugía de orejas o auriculoplastía consiste en cambiar la forma o el tamaño de las mismas. La mas común es la cirugía de las orejas en asa u orejas prominentes y consiste en remodelar el cartílago mediante una incisión escondida detrás de las orejas, para darle una forma más armónica y agradable.  
+                      </p>
+                  </li>
+                </ul>
+                <div class="service-pic">
+                  <img src="styles/img/rostro2.jpg" alt="rostro">
+                  </div>
+                <ul>
+                  <li> 
+                    <h2 id="lifting">lifting facial o ritidoplastia</h2>
+                      <p> Es el procedimiento mediante el cual se corrige la flaccidez facial y del cuello reposicionando los tejidos y eliminando el exceso de piel. Las incisiones se ocultan en los pliegues y regiones poco visibles de la cabeza. Rejuvenece el rostro con naturalidad y armonía.   
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="mentoplastía">mentoplastía</h2>
+                      <p> Es un procedimiento que mediante la inclusión de un implante de silicona logra dar volumen y proyección al mentón. Se realiza bajo anestesia general o sedación con una incisión pequeña localizada debajo del mentón. Tiene un rápida recuperación y reincorporación a las actividades habituales.   
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="bichectomia">bichectomia</h2>
+                      <p> Las bolsas de bichat, son acúmulos de tejido adiposo que se localiza en el interior de las mejillas. El objetivo de su extracción es reducir el ancho de las mejillas, destacar los pómulos y afinar la cara. Luce un rostro mas delgado y definido. Se puede realizar en hombres como en mujeres, con una adecuada valoración de un profesional capacitado, determinaremos si eres o no candidato para este procedimiento.
+                      </p>
+                  </li>
+              </ul>
             </div>
-            <ul > 
-              <li> 
-                <h2 id="abdominal">dermolipectomia abdominal</h2>
-                  <p> La abdominoplastía o dermolipectomía abdominal es un procedimiento que reseca la piel y tejido adiposo excedente debajo del ombligo. Además, permite el tensado de los músculos rectos del abdomen muchas veces debilitados por embarazos o aumentos masivos de peso. la cicatriz se oculta por la ropa interior.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="lipoescultura">lipoescultura </h2>
-                  <p> La lipoescultura elimina la adiposidad localizada y remodela tu figura. no es un método para adelgazar. Se realizan incisiones mínimas y mediante cánulas muy pequeñas se aspira el tejido graso. 
-                  </p>
-              </li>
-              <li> 
-                <h2 id="lipotransferencia">lipotransferencia</h2>
-                  <p> Es el procedimiento que extrae grasa por succión de una región corporal y se transfiere en otra zona del cuerpo durante el mismo procedimiento. Se puede utilizar para relleno de mamas, aumentar el volumen de glúteos, surcos nasogenianos u ojeras.  
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/gluteos.jpg" alt="gluteos">
             </div>
-            <ul>
-              <li> 
-                <h2 id="brazos">lifting de brazos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde el codo a la axila, permitiendo que los brazos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo. Puede asociarse con lipoaspiración para darle una forma más definida.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="muslos">lifting de muslos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde la ingle a la rodilla, permitiendo que los muslos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="gluteos">implantes glúteos</h2>
-                  <p> La colocación de implantes glúteos se realiza mediante una incisión en el pliegue interglúteo por lo que la cicatriz queda disimulada. Se accede a colocar la prótesis de silicona por debajo del músculo glúteo mayor lo que le otorga un aspecto y forma natural. 
-                  </p>
-              </li>
-            </ul>
           </div>
-        </div>
     </div>
   
     <div  id="contacto"  class="container"> 
