--- a/cirugia-plastica-mamaria.html
+++ b/cirugia-plastica-mamaria.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
     <title>Dra. Micaela Taverna Cirujana Plástica</title>
-    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> </head>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
+</head>
 <body>
     <header id='mainHeader'>
         <div class="logo">
@@ -64,51 +65,40 @@
       </div>
   </div>
     <div class="container">
-      <h2 class="service-title">Cirugía del contorno corporal</h2>
+      <h2 class="service-title">Cirugía plástica y reparadora</h2>
         <div class="service-presentation">   
           <div class="service-list">
+            <h2 class="service-subtitle" id="mamas">Cirugía Mamaria</h2>
             <div class="service-pic">
-              <img src="styles/img/lipo.jpg" alt="lipo">
+              <img src="styles/img/mamas.jpg" alt="mamas">
             </div>
             <ul > 
               <li> 
-                <h2 id="abdominal">dermolipectomia abdominal</h2>
-                  <p> La abdominoplastía o dermolipectomía abdominal es un procedimiento que reseca la piel y tejido adiposo excedente debajo del ombligo. Además, permite el tensado de los músculos rectos del abdomen muchas veces debilitados por embarazos o aumentos masivos de peso. la cicatriz se oculta por la ropa interior.
+                <h2 id="aumentomamario">Aumento Mamario</h2>
+                  <p> La mastoplastía de aumento es un procedimiento que mediante un implante de silicona cambia la forma y el tamaño de las mamas. Existen distintas formas de abordaje y planos de colocación. 
+                    Esta cirugía logra: Aumento de tamaño, mejorar asimetrías, luego del parto o adelgazamiento.
+                    Podés agendar una consulta para personalizar tu tratamiento. 
                   </p>
               </li>
               <li> 
-                <h2 id="lipoescultura">lipoescultura </h2>
-                  <p> La lipoescultura elimina la adiposidad localizada y remodela tu figura. no es un método para adelgazar. Se realizan incisiones mínimas y mediante cánulas muy pequeñas se aspira el tejido graso. 
+                <h2 id="reduccionmamaria">Reduccion Mamaria</h2>
+                  <p> La mastoplastía de reducción es un procedimiento que quita tejido graso y mamario logrando una forma y tamaño acordes a cada cuerpo, y en caso de ser necesario llevar el tamaño de la areola a un tamaño armónico. 
                   </p>
               </li>
               <li> 
-                <h2 id="lipotransferencia">lipotransferencia</h2>
-                  <p> Es el procedimiento que extrae grasa por succión de una región corporal y se transfiere en otra zona del cuerpo durante el mismo procedimiento. Se puede utilizar para relleno de mamas, aumentar el volumen de glúteos, surcos nasogenianos u ojeras.  
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/gluteos.jpg" alt="gluteos">
-            </div>
-            <ul>
-              <li> 
-                <h2 id="brazos">lifting de brazos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde el codo a la axila, permitiendo que los brazos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo. Puede asociarse con lipoaspiración para darle una forma más definida.
+                <h2 id="mastopexia">MASTOPEXIA (LEVANTAMIENTO MAMARIO)</h2>
+                  <p> La mastopexia logra llevar la mama y el pezón a un tamaño y posición acorde a cada cuerpo. En los casos en que solo haya exceso de piel, se podrá optar por eliminar su exceso y mejorar su forma mediante una prótesis de silicona. En los casos en que haya abundante piel y tejido mamario se podrá remodelar los mismos para obtener una mama armoniosa.  
                   </p>
               </li>
               <li> 
-                <h2 id="muslos">lifting de muslos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde la ingle a la rodilla, permitiendo que los muslos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="gluteos">implantes glúteos</h2>
-                  <p> La colocación de implantes glúteos se realiza mediante una incisión en el pliegue interglúteo por lo que la cicatriz queda disimulada. Se accede a colocar la prótesis de silicona por debajo del músculo glúteo mayor lo que le otorga un aspecto y forma natural. 
+                <h2 id="ginecomastia">GINECOMASTIA</h2>
+                  <p> La ginecomastia es el aumento de volumen de la glándula mamaria en el hombre que puede tener distintas causas. Si este aumento es pequeño solo será necesario la resección de la glándula mediante una incisión en la areola y, si este es mayor puede que sea necesario resecar piel además y por lo tanto habrá que hacer mas incisiones.  
                   </p>
               </li>
             </ul>
           </div>
         </div>
+      </div>
     </div>
   
     <div  id="contacto"  class="container"> 
