--- a/toxina-botulinica.html
+++ b/toxina-botulinica.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
     <title>Dra. Micaela Taverna Cirujana Plástica</title>
-    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> </head>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
+</head>
 <body>
     <header id='mainHeader'>
         <div class="logo">
@@ -64,51 +65,22 @@
       </div>
   </div>
     <div class="container">
-      <h2 class="service-title">Cirugía del contorno corporal</h2>
-        <div class="service-presentation">   
+      <h2 class="service-title">Medicina Estética</h2>
+        <div class="service-presentation"> 
           <div class="service-list">
             <div class="service-pic">
-              <img src="styles/img/lipo.jpg" alt="lipo">
+              <img src="styles/img/medicinaestetica.jpg" alt="cuerpo-medicina-estetica">
             </div>
             <ul > 
               <li> 
-                <h2 id="abdominal">dermolipectomia abdominal</h2>
-                  <p> La abdominoplastía o dermolipectomía abdominal es un procedimiento que reseca la piel y tejido adiposo excedente debajo del ombligo. Además, permite el tensado de los músculos rectos del abdomen muchas veces debilitados por embarazos o aumentos masivos de peso. la cicatriz se oculta por la ropa interior.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="lipoescultura">lipoescultura </h2>
-                  <p> La lipoescultura elimina la adiposidad localizada y remodela tu figura. no es un método para adelgazar. Se realizan incisiones mínimas y mediante cánulas muy pequeñas se aspira el tejido graso. 
-                  </p>
-              </li>
-              <li> 
-                <h2 id="lipotransferencia">lipotransferencia</h2>
-                  <p> Es el procedimiento que extrae grasa por succión de una región corporal y se transfiere en otra zona del cuerpo durante el mismo procedimiento. Se puede utilizar para relleno de mamas, aumentar el volumen de glúteos, surcos nasogenianos u ojeras.  
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/gluteos.jpg" alt="gluteos">
-            </div>
-            <ul>
-              <li> 
-                <h2 id="brazos">lifting de brazos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde el codo a la axila, permitiendo que los brazos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo. Puede asociarse con lipoaspiración para darle una forma más definida.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="muslos">lifting de muslos</h2>
-                  <p> Es el procedimiento en el que se extrae el exceso de piel y grasa desde la ingle a la rodilla, permitiendo que los muslos queden firmes luego de adelgazamientos masivos o debido al paso del tiempo.
-                  </p>
-              </li>
-              <li> 
-                <h2 id="gluteos">implantes glúteos</h2>
-                  <p> La colocación de implantes glúteos se realiza mediante una incisión en el pliegue interglúteo por lo que la cicatriz queda disimulada. Se accede a colocar la prótesis de silicona por debajo del músculo glúteo mayor lo que le otorga un aspecto y forma natural. 
+                <h2>Toxina Botulinica</h2>
+                  <p> La toxina botulínica logra relajar los músculos de la mímica para que no se marquen las arrugas o evitar que aparezcan. Tiene una duración aproximada de 4-6 meses. Se puede aplicar en frente, patas de gallo, cuello o nariz. También se utiliza para aquellos pacientes que tengan sudoración excesiva en manos o axilas y en aquellos que presentan bruxismo (apretón de dientes durante la noche). 
                   </p>
               </li>
             </ul>
           </div>
         </div>
+      </div>
     </div>
   
     <div  id="contacto"  class="container"> 
