--- a/cirugia-genero.html
+++ b/cirugia-genero.html
@@ -8,10 +8,8 @@
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
-       <title>MT Cirugía Plástica</title>
-       <link rel = "icon" href =  
-       "styles/img/logo-fondo-blanco.jpg" 
-               type = "image/x-icon"> 
+    <title>Dra. Micaela Taverna Cirujana Plástica</title>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
 </head>
 <body>
     <header id='mainHeader'>
@@ -21,51 +19,51 @@
         <nav>
           <ul>
             <li>
-              <a href="medicina-estetica.html"><span>Medicina Estética</span></a>
+              <a href="index.html#estetica"><span>Medicina Estética</span></a>
             </li>
             <li>
-              <a href="index.html#cirugia"><span>Cirugías</span></a>
+              <a href="index.html#cirugia"><span>Cirugía Plástica y Reparadora</span></a>
             </li>
             <li>
-             <a href="#contacto"><span>Consultorio</span></a>
-           </li>
+             <a href="#contacto"><span>Contacto</span></a>
+            </li>
           </ul>
         </nav>
         
     </header>
     <div class=main-container>
-        <div id='inicio' class=main>
-                <div class="mainCarrousel"> 
-                  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                    </ol>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="styles/img/bannerpresent.png" class="d-block w-100 imgsize" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannercirugiacontorno.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannermedicina.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannerplastica.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannerreparadora.png" class="d-block w-100" alt="...">
-                        </div>
+      <div id='inicio' class=main>
+              <div class="mainCarrousel"> 
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                  <ol>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                  </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="styles/img/banner-inicio/1.png" class="d-block w-100 imgsize" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/3.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/4.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/5.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/6.png" class="d-block w-100" alt="...">
                       </div>
                     </div>
-                </div>
-        </div>
-    </div>
+                  </div>
+              </div>
+      </div>
+  </div>
     <div class="container">
       <h2 class="service-title">Cirugía de género</h2>
         <div class="service-presentation">   
@@ -86,7 +84,7 @@
               </li>
               <li> 
                 <h2 id="feminización-masculinización-rostro">feminización / masculinización del rostro</h2>
-                  <p> Se trata de las técnicas quirúrgicas que ayudan a armonizar las características faciales que generalmente son percibidas como masculinas o femeninas. estas incluyen: 
+                  <p> Se trata de las técnicas quirúrgicas que ayudan a armonizar las características faciales que generalmente son percibidas como masculinas o femeninas. Estas incluyen: 
                   </p>
                   <ul class="list-gender">
                     <li>Esqueleto óseo</li>
