--- a/cirugia-genital.html
+++ b/cirugia-genital.html
@@ -8,10 +8,8 @@
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
-       <title>MT Cirugía Plástica</title>
-       <link rel = "icon" href =  
-       "styles/img/logo-fondo-blanco.jpg" 
-               type = "image/x-icon"> 
+    <title>Dra. Micaela Taverna Cirujana Plástica</title>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
 </head>
 <body>
     <header id='mainHeader'>
@@ -21,51 +19,51 @@
         <nav>
           <ul>
             <li>
-              <a href="medicina-estetica.html"><span>Medicina Estética</span></a>
+              <a href="index.html#estetica"><span>Medicina Estética</span></a>
             </li>
             <li>
-              <a href="index.html#cirugia"><span>Cirugías</span></a>
+              <a href="index.html#cirugia"><span>Cirugía Plástica y Reparadora</span></a>
             </li>
             <li>
-             <a href="#contacto"><span>Consultorio</span></a>
-           </li>
+             <a href="#contacto"><span>Contacto</span></a>
+            </li>
           </ul>
         </nav>
         
     </header>
     <div class=main-container>
-        <div id='inicio' class=main>
-                <div class="mainCarrousel"> 
-                  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                    </ol>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="styles/img/bannerpresent.png" class="d-block w-100 imgsize" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannercirugiacontorno.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannermedicina.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannerplastica.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="styles/img/bannerreparadora.png" class="d-block w-100" alt="...">
-                        </div>
+      <div id='inicio' class=main>
+              <div class="mainCarrousel"> 
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                  <ol>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                  </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="styles/img/banner-inicio/1.png" class="d-block w-100 imgsize" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/3.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/4.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/5.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="styles/img/banner-inicio/6.png" class="d-block w-100" alt="...">
                       </div>
                     </div>
-                </div>
-        </div>
-    </div>
+                  </div>
+              </div>
+      </div>
+  </div>
     <div class="container">
       <h2 class="service-title">Cirugía genital</h2>
         <div class="service-presentation">   
@@ -76,12 +74,12 @@
             <ul > 
               <li> 
                 <h2 id="labioplastia-aumento">labioplastia de aumento</h2>
-                  <p> la pérdida de colágeno y turgencia también se hacen notorias con el paso del tiempo en la región genital. esto se puede recuperar lipoaspirando grasa de otra región del cuerpo y transfiriéndola a los labios mayores logrando simetría y volumen. también se puede realizar mediante rellenos con ácido hialurónico. 
+                  <p> La pérdida de colágeno y turgencia también se hacen notorias con el paso del tiempo en la región genital. Esto se puede recuperar lipoaspirando grasa de otra región del cuerpo y transfiriéndola a los labios mayores logrando simetría y volumen. También se puede realizar mediante rellenos con ácido hialurónico. 
                   </p>
               </li>
               <li> 
                 <h2 id="labioplastia-reduccion">labioplastia de reducción </h2>
-                  <p> el procedimiento consiste en llevar el tamaño de los labios menores colgantes o agrandados a una proporción armónica y confortable para la paciente. 
+                  <p> El procedimiento consiste en llevar el tamaño de los labios menores colgantes o agrandados a una proporción armónica y confortable para la paciente. 
                   </p>
               </li>
             </ul>
@@ -91,12 +89,12 @@
             <ul>
               <li> 
                 <h2 id="lipoescultura-pubis">lipoescultura del pubis</h2>
-                  <p> este procedimiento se realiza mediante la lipoaspiración del tejido graso acumulado en la zona pubiana. generalmente se realiza junto a la lipoescultura de otras zonas. también se puede realizar solo y es un procedimiento rápido de pronta recuperación y reinserción a las actividades cotidianas. 
+                  <p> Este procedimiento se realiza mediante la lipoaspiración del tejido graso acumulado en la zona pubiana. Generalmente se realiza junto a la lipoescultura de otras zonas. También se puede realizar solo y es un procedimiento rápido de pronta recuperación y reinserción a las actividades cotidianas. 
                   </p>
               </li>
               <li> 
                 <h2 id="descapuchamiento-clítoris">descapuchamiento del clítoris</h2>
-                  <p> el clítoris se encuentra cubierto por un capuchón de piel que puede estar aumentado de tamaño cubriéndolo parcial o totalmente generando menor estimulación sexual. este procedimiento reduce su tamaño mejorando su estética y funcionalidad.
+                  <p> El clítoris se encuentra cubierto por un capuchón de piel que puede estar aumentado de tamaño cubriéndolo parcial o totalmente generando menor estimulación sexual. Este procedimiento reduce su tamaño mejorando su estética y funcionalidad.
                   </p>
               </li>
             </ul>
