--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
-    <!--<script type='text/javascript' src="script.js"></script>-->
-       <title>MT Cirugía Plástica</title>
-       <link rel = "icon" href =  
-       "styles/img/logo-fondo-blanco.jpg" 
-               type = "image/x-icon"> 
+    <title>Dra. Micaela Taverna Cirujana Plástica</title>
+    <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> 
 </head>
 <body>
     <header id='mainHeader'>
@@ -25,10 +22,10 @@
               <a href="#estetica"><span>Medicina Estetica</span></a>
             </li>
             <li>
-              <a href="#cirugia"><span>Cirugias</span></a>
+              <a href="#cirugia"><span>Cirugía Plástica y Reparadora</span></a>
             </li>
             <li>
-             <a href="#contacto"><span>Consultorio</span></a>
+             <a href="#contacto"><span>Contacto</span></a>
            </li>
           </ul>
         </nav>
@@ -37,7 +34,7 @@
         <div id='inicio' class=main>
                 <div class="mainCarrousel"> 
                   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <ol class="carousel-indicators">
+                    <ol>
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -47,19 +44,19 @@
                     </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="styles/img/bannerpresent.png" class="d-block w-100 imgsize" alt="...">
+                          <img src="styles/img/banner-inicio/1.png" class="d-block w-100 imgsize" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="styles/img/bannercirugiacontorno.png" class="d-block w-100" alt="...">
+                          <img src="styles/img/banner-inicio/3.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="styles/img/bannermedicina.png" class="d-block w-100" alt="...">
+                          <img src="styles/img/banner-inicio/4.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="styles/img/bannerplastica.png" class="d-block w-100" alt="...">
+                          <img src="styles/img/banner-inicio/5.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="styles/img/bannerreparadora.png" class="d-block w-100" alt="...">
+                          <img src="styles/img/banner-inicio/6.png" class="d-block w-100" alt="...">
                         </div>
                       </div>
                     </div>
@@ -97,17 +94,41 @@
       <div class="services"> 
         <div class="services-container"> 
           <h3 id="estetica" >Conocé los tratamientos de Medicina Estética</h3>
-            <div class="description"> 
-              <div class="card">   
-                <div class="card-inner" ><a href="medicina-estetica.html"><p>Medicina Estética</p></a></div>
-              </div>
-            </div>
-        </div>
-        <div class="services-container"> 
-          <h3 id="cirugia" >Conocé todas las Cirugías</h3>
               <div  class="description"> 
                 <div class="card">   
-                  <div class="card-inner" ><a href="cirugia-plastica.html"><p>CIRUGIA PLASTICA Y REPARADORA</p></a></div>
+                  <div class="card-inner" ><a href="peeling.html"><p>Peeling</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="celulitis-flaccidez.html"><p>Celulitis y flaccidez</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="toxina-botulinica.html"><p>TOXINA BOTULÍNICA</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="sudoracion-excesiva.html"><p>SUDORACIÓN EXCESIVA</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="relleno-facial.html"><p>RELLENOS Faciales</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="plasma-rico-plaquetas.html"><p>Plasma Rico en Plaquetas</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="hilos-tensores.html"><p>HILOS TENSORES</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="caida-cabello.html"><p>CAIDA DEL CABELLO</p></a></div>
+                </div>
+              </div>
+        </div>
+        <div class="services-container"> 
+          <h3 id="cirugia" >Cirugía Plástica y Reparadora</h3>
+              <div  class="description"> 
+                <div class="card">   
+                  <div class="card-inner" ><a href="cirugia-plastica-mamaria.html"><p>Cirugía Mamaria</p></a></div>
+                </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="cirugia-plastica-facial.html"><p>CIRUGIA Facial </p></a></div>
                 </div>
                 <div class="card">   
                   <div class="card-inner"><a href="cirugia-contorno-corporal.html"><p>CIRUGIA DEL CONTORNO CORPORAL </p></a></div>
@@ -118,12 +139,15 @@
                 <div class="card">   
                   <div class="card-inner"><a href="cirugia-genero.html"><p>CIRUGIA DE GENERO</p></a></div>
                 </div>
+                <div class="card">   
+                  <div class="card-inner"><a href="cirugia-reparadora.html"><p>CIRUGIA DE Reparadora</p></a></div>
+                </div>
               </div>
         </div>
       </div> 
   
     <div  id="contacto"  class="container"> 
-      <h3>Consultorio</h3>
+      <h3>Contacto</h3>
       <div class="contact-info">
         <div class="social"> 
            <p class="address"><a href="https://www.google.com/maps/place/Jun%C3%ADn+1616,+C1113AAR+CABA/@-34.589791,-58.393851,16z/data=!4m5!3m4!1s0x95bccaa2a2d23af3:0xe46ac88f9ba05c19!8m2!3d-34.589791!4d-58.393851?hl=es-419"><i class="fas fa-map-marker-alt"></i>Junin 1616 1piso, Recoleta.</a></p>
