--- a/cirugia-reparadora.html
+++ b/cirugia-reparadora.html
@@ -93,26 +93,26 @@
     </div>
   
     <div  id="contacto"  class="container"> 
-      <h3>Consultorio</h3>
+      <h3>Contacto</h3>
       <div class="contact-info">
         <div class="social"> 
-           <p class="address"><a href="https://www.google.com/maps/place/Jun%C3%ADn+1616,+C1113AAR+CABA/@-34.589791,-58.393851,16z/data=!4m5!3m4!1s0x95bccaa2a2d23af3:0xe46ac88f9ba05c19!8m2!3d-34.589791!4d-58.393851?hl=es-419"><i class="fas fa-map-marker-alt"></i>Junin 1616 1piso, Recoleta.</a></p>
-           <p><a href="micaelatavernacp@gmail.com"><i class="fas fa-inbox"></i> micaelatavernacp@gmail.com
-          </a></p>
-           <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></p>
-           <p><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></p>
-      </div>  
-        <div class="locationMap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.5681968870244!2d-58.396039684770805!3d-34.589790980463036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa2a2d23af3%3A0xe46ac88f9ba05c19!2sJun%C3%ADn%201616%2C%20C1113AAR%20CABA!5e0!3m2!1ses-419!2sar!4v1580346122293!5m2!1ses-419!2sar" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe> 
-        </div>
-      </div> 
-    </div>
-    <footer class='footerContainer'>
-        <div class= footerNav>
-           <p><a href="micaelatavernacp@gmail.com"> <i class="fas fa-inbox"></i>micaelatavernacp@gmail.com</a></p>
-           <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></p>
-           <p><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></p>
-        </div>
+          <p class="address"><a href="https://goo.gl/maps/iJaJB3Te9Lhm9JVN8"><i class="fas fa-map-marker-alt"></i>Virrey Olaguer y Feliú 2462 3°A, Belgrano, CABA, Argentina</a></p>
+          <p><a href="dramicaelataverna@gmail.com"><i class="fas fa-inbox"></i> dramicaelataverna@gmail.com
+         </a></p>
+          <p><a href="https://www.facebook.com/Dra.MicaelaTaverna"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
+          <p><a href="https://www.instagram.com/dramicaelataverna/"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+     </div>  
+       <div class="locationMap">
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.456232851054!2d-58.454473185553745!3d-34.56732078046887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d00555cb35%3A0xc4e4d257e30b1b8!2sVirrey%20Olaguer%20y%20Feli%C3%BA%202462%2C%20C1426%20EBB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1598581412467!5m2!1ses-419!2sar" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+       </div>
+     </div> 
+   </div>
+   <footer class='footerContainer'>
+       <div class= footerNav>
+          <p><a href="dramicaelataverna@gmail.com"> <i class="fas fa-inbox"></i>dramicaelataverna@gmail.coom</a></p>
+          <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
+          <p><a href="https://www.instagram.com/dramicaelataverna/"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+       </div>
         <div class="copyright">
            <p>Created by <span>@Merchy </span></p>
         </div>
