arreglos en enlaces redes, wa link y ajuste de logo

--- a/cirugia-contorno-corporal.html
+++ b/cirugia-contorno-corporal.html
@@ -6,30 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">    
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
     <title>Dra. Micaela Taverna Cirujana Plástica</title>
     <link rel = "icon" href ="styles/img/logo-fondo-blanco.jpg" type = "image/x-icon"> </head>
 <body>
-    <header id='mainHeader'>
-        <div class="logo">
-           <a href="index.html"><img src="styles/img/logotransp.png" alt=""></a>
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a href="index.html#estetica"><span>Medicina Estética</span></a>
-            </li>
-            <li>
-              <a href="index.html#cirugia"><span>Cirugía Plástica y Reparadora</span></a>
-            </li>
-            <li>
-             <a href="#contacto"><span>Contacto</span></a>
-            </li>
-          </ul>
-        </nav>
-        
-    </header>
+  <header id='mainHeader'>
+    <div class="logo">
+       <a href="index.html"><img src="styles/img/logo-transparente-largo.png" alt=""></a>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="#estetica"><span>Medicina Estética</span></a>
+        </li>
+        <li>
+          <a href="#cirugia"><span>Cirugía Plástica y Reparadora</span></a>
+        </li>
+        <li>
+         <a href="#contacto"><span>Contacto</span></a>
+       </li>
+      </ul>
+    </nav>
+    <div class="wa-logo">
+      <a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp my-float "></i></a>
+    </div>
+</header>
     <div class=main-container>
       <div id='inicio' class=main>
               <div class="mainCarrousel"> 
@@ -116,22 +118,21 @@
       <div class="contact-info">
         <div class="social"> 
           <p class="address"><a href="https://goo.gl/maps/iJaJB3Te9Lhm9JVN8"><i class="fas fa-map-marker-alt"></i>Virrey Olaguer y Feliú 2462 3°A, Belgrano, CABA, Argentina</a></p>
-          <p><a href="dramicaelataverna@gmail.com"><i class="fas fa-inbox"></i> dramicaelataverna@gmail.com
-         </a></p>
-          <p><a href="https://www.facebook.com/Dra.MicaelaTaverna"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
-          <p><a href="https://www.instagram.com/dramicaelataverna/"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
-     </div>  
+          <p><a href="dramicaelataverna@gmail.com" target="_blank"><i class="fas fa-inbox"></i> dramicaelataverna@gmail.com</a></p>
+          <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
+          <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+        </div> 
        <div class="locationMap">
          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.456232851054!2d-58.454473185553745!3d-34.56732078046887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d00555cb35%3A0xc4e4d257e30b1b8!2sVirrey%20Olaguer%20y%20Feli%C3%BA%202462%2C%20C1426%20EBB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1598581412467!5m2!1ses-419!2sar" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
        </div>
      </div> 
    </div>
    <footer class='footerContainer'>
-       <div class= footerNav>
-          <p><a href="dramicaelataverna@gmail.com"> <i class="fas fa-inbox"></i>dramicaelataverna@gmail.coom</a></p>
-          <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
-          <p><a href="https://www.instagram.com/dramicaelataverna/"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
-       </div>
+        <div class= footerNav>
+          <p><a href="dramicaelataverna@gmail.com" target="_blank"> <i class="fas fa-inbox"></i>dramicaelataverna@gmail.com</a></p>
+          <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
+          <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+        </div>
         <div class="copyright">
            <p>Created by <span>@Merchy </span></p>
         </div>
