--- a/cirugia-genero.html
+++ b/cirugia-genero.html
@@ -111,6 +111,7 @@
           <p><a href="dramicaelataverna@gmail.com" target="_blank"><i class="fas fa-inbox"></i> dramicaelataverna@gmail.com</a></p>
           <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
           <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+          <p><a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp"></i>+(54)9 11 7360-3003</a></p>
         </div>  
        <div class="locationMap">
          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.456232851054!2d-58.454473185553745!3d-34.56732078046887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d00555cb35%3A0xc4e4d257e30b1b8!2sVirrey%20Olaguer%20y%20Feli%C3%BA%202462%2C%20C1426%20EBB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1598581412467!5m2!1ses-419!2sar" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -122,6 +123,7 @@
           <p><a href="dramicaelataverna@gmail.com" target="_blank"> <i class="fas fa-inbox"></i>dramicaelataverna@gmail.com</a></p>
           <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
           <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
+          <p><a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp"></i>+(54)9 11 7360-3003</a></p>
         </div>
         <div class="copyright">
            <p>Created by <span>@Merchy </span></p>
