--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
      </div> 
 
    </div>
+    </div>
    <footer class='footerContainer'>
        <div class= footerNav>
           <p><a href="dramicaelataverna@gmail.com" target="_blank"> <i class="fas fa-inbox"></i>dramicaelataverna@gmail.com</a></p>
