ajustes en tamano logo y otros ajustes de margin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header id='mainHeader'>
         <div class="logo">
-           <a href="index.html"><img src="styles/img/logo-transparente-largo.png" alt=""></a>
+           <a href="index.html"><img src="styles/img/logo-transparente-cortado.png" alt="logo"></a>
         </div>
         <nav>
           <ul>
@@ -29,9 +29,6 @@
            </li>
           </ul>
         </nav>
-        <div class="wa-logo">
-          <a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp my-float "></i></a>
-        </div>
     </header>
     <div class=main-container>
         <div id='inicio' class=main>
@@ -143,7 +140,7 @@
                   <div class="card-inner"><a href="cirugia-genero.html"><p>CIRUGIA DE GENERO</p></a></div>
                 </div>
                 <div class="card">   
-                  <div class="card-inner"><a href="cirugia-reparadora.html"><p>CIRUGIA DE Reparadora</p></a></div>
+                  <div class="card-inner"><a href="cirugia-reparadora.html"><p>CIRUGIA Reparadora</p></a></div>
                 </div>
               </div>
         </div>
@@ -172,6 +169,9 @@
           <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
           <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
           <p><a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp"></i>+(54)9 11 7360-3003</a></p>
+        </div>
+        <div class="wa-logo">
+          <a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp my-float "></i></a>
         </div>
         <div class="copyright">
            <p>Created by <span>@Merchy </span></p>
