--- a/cirugia-contorno-corporal.html
+++ b/cirugia-contorno-corporal.html
@@ -13,7 +13,7 @@
 <body>
   <header id='mainHeader'>
     <div class="logo">
-       <a href="index.html"><img src="styles/img/logo-transparente-largo.png" alt=""></a>
+       <a href="index.html"><img src="styles/img/logo-transparente-cortado.png" alt="logo"></a>
     </div>
     <nav>
       <ul>
@@ -28,9 +28,6 @@
        </li>
       </ul>
     </nav>
-    <div class="wa-logo">
-      <a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp my-float "></i></a>
-    </div>
 </header>
     <div class=main-container>
       <div id='inicio' class=main>
@@ -134,6 +131,9 @@
           <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
           <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
           <p><a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp"></i>+(54)9 11 7360-3003</a></p>
+        </div>
+        <div class="wa-logo">
+          <a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp my-float "></i></a>
         </div>
         <div class="copyright">
            <p>Created by <span>@Merchy </span></p>
